--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,12 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <title>BharatSe</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
+    <script src="../src/container/Community/Communityscript.js"></script>
   </body>
 </html>
